<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lite"
    tools:context=".PersonalInformation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/fname_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/fname"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fname_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/fname_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fname_text_view"
            app:layout_constraintTop_toTopOf="@+id/fname_text_view" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/lname_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/lname"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname_text_view" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lname_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/lname_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lname_text_view"
            app:layout_constraintTop_toTopOf="@id/lname_text_view" />


        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/fathername_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/father_name"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lname_text_view" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/father_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/fathername_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fathername_tv"
            app:layout_constraintTop_toTopOf="@id/fathername_tv" />


        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/gender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/gender"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fathername_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/gender_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/gender_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gender_tv"
            app:layout_constraintTop_toTopOf="@id/gender_tv" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/cnumber_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/c_number"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cnumber_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="phone"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cnumber_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cnumber_tv"
            app:layout_constraintTop_toTopOf="@id/cnumber_tv" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/email"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnumber_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/email_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_tv"
            app:layout_constraintTop_toTopOf="@id/email_tv" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="5"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/password"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/password_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password_tv"
            app:layout_constraintTop_toTopOf="@id/password_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>