<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lite"
    tools:context=".Education">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:id="@+id/constraint_lay"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/degree_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="6"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/degree"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/degree_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/degree_text_view"
            app:layout_constraintTop_toTopOf="@id/degree_text_view"
            app:layout_constraintBottom_toBottomOf="@id/degree_text_view"
            />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/grade_text_view"
            android:text="@string/grades"
            android:textSize="20sp"
            android:minHeight="40dp"
            android:ems="6"
            android:textColor="@color/fragment_text_clr"
            android:gravity="left|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/degree_text_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/grade_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/grade_text_view"
            app:layout_constraintTop_toTopOf="@id/grade_text_view"
            app:layout_constraintBottom_toBottomOf="@id/grade_text_view"
            />


        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="6"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/year"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grade_text_view" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/year_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="date"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/year_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/year_tv"
            app:layout_constraintTop_toTopOf="@id/year_tv" />


        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/institute_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="6"
            android:gravity="left|center"
            android:minHeight="40dp"
            android:text="@string/institute"
            android:textColor="@color/fragment_text_clr"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/institute_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/institute_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/institute_tv"
            app:layout_constraintTop_toTopOf="@id/institute_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>